--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -77,7 +77,7 @@ status_screen:1
 #### Baudrate / Connection speed
 # This baudrate setting is used for serial connection to the printer and other serial hosts like ESP8266.
 #   Options: [2400: 0, 9600: 1, 19200: 2, 38400: 3, 57600: 4, 115200: 5, 250000: 6, 500000: 7, 1000000: 8]
-baudrate:5
+baudrate:6
 
 #### Default Touch Mode Language
 # Select the language to display on the LCD while in Touch Mode.
@@ -243,7 +243,7 @@ fan_ctrl_count:0
 #### Bed / Extruder / Chamber Maximum Temperatures
 #   Format: [max_temp: T0:<max temp> T1:<max temp> T2:<max temp> T3:<max temp> T4:<max temp> T5:<max temp> BED:<max temp> CHAMBER:<max temp>]
 #   Unit: [°C]
-max_temp:T0:275 T1:275 T2:275 T3:275 T4:275 T5:275 BED:150 CHAMBER:60
+max_temp:T0:295 T1:275 T2:275 T3:275 T4:275 T5:275 BED:120 CHAMBER:60
 
 #### Cold Extrusion Minimum Temperature
 # Minimum temperature need to extrude/retract. Any extrude/retract below this temperature will be prevented.
@@ -393,17 +393,17 @@ xy_offset_probing:1
 # NOTE: Only for Marlin printers with one stepper driver per Z stepper motor and no Z timing belt. Also requires a BLTouch.
 #
 #   Options: [enable: 1, disable: 0]
-z_steppers_alignment:0
+z_steppers_alignment:1
 
 #### Preheat Temperatures
 #   Preheat name format: [preheat_nameX:<name (max 7 characters)>]
 #   Preheat temperature format: [preheat_tempX:T<hotend temp> B<bed temp>]
 #   Unit: [temperature in °C]
 preheat_name1:PLA
-preheat_temp1:T200 B60
+preheat_temp1:T180 B60
 
 preheat_name2:PETG
-preheat_temp2:T240 B70
+preheat_temp2:T235 B80
 
 preheat_name3:ABS
 preheat_temp3:T230 B90
@@ -443,7 +443,7 @@ auto_shutdown_temp:50
 
 #### Default Filament Runout Sensor
 #   Options: [enable: 1, disable: 0, smart: 2]
-fil_runout:0
+fil_runout:1
 
 #### Inverted Filament Runout Logic
 # Invert the logic of the sensor.
@@ -469,7 +469,7 @@ fil_runout_distance:7
 # Enabled by default.
 # Disable to reduce the loss of SD card or U disk.
 #   Options: [enable: 1, disable: 0]
-pl_recovery_en:1
+pl_recovery_en:0
 
 #### Power Loss Recovery Homing
 # Home before power loss recovery.
@@ -548,20 +548,20 @@ lcd_idle_delay:4
 # NOTE: If the values are left blank then default name and gcode will be used.
 #
 #   Value range: [label: max 24 characters, gcode: max 70 characters]
-custom_label_1:Disable steppers
-custom_gcode_1:M84\n
-custom_label_2:Init sd card
-custom_gcode_2:M21\n
-custom_label_3:Release sd card
-custom_gcode_3:M22\n
-custom_label_4:Restore leveling
-custom_gcode_4:M420 S1\n
-custom_label_5:Save to EEPROM
-custom_gcode_5:M500\n
-custom_label_6:Restore from EEPROM
-custom_gcode_6:M501\n
-custom_label_7:EEPROM defaults
-custom_gcode_7:M502\n
+#custom_label_1:Disable steppers
+#custom_gcode_1:M84\n
+#custom_label_2:Init sd card
+#custom_gcode_2:M21\n
+#custom_label_3:Release sd card
+#custom_gcode_3:M22\n
+#custom_label_4:Restore leveling
+#custom_gcode_4:M420 S1\n
+#custom_label_5:Save to EEPROM
+#custom_gcode_5:M500\n
+#custom_label_6:Restore from EEPROM
+#custom_gcode_6:M501\n
+#custom_label_7:EEPROM defaults
+#custom_gcode_7:M502\n
 #custom_label_8:custom8
 #custom_gcode_8:M105\n
 #custom_label_9:custom9
